environments/stage/apps/full-stack/services/backend-app/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: backend-app
    app.kubernetes.io/part-of: full-stack
  name: backend-app
  namespace: stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: backend-app
      app.kubernetes.io/part-of: full-stack
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: backend-app
        app.kubernetes.io/part-of: full-stack
    spec:
      containers:
      - image: quay.io/isequeir/backend-service:v1.0.0
        imagePullPolicy: Always
        name: backend-app
        ports:
        - containerPort: 8081
        resources: {}       
      serviceAccountName: default
status: {}
