environments/stage/apps/full-stack/services/backend-app/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: backend-app
    app.kubernetes.io/part-of: full-stack
  name: backend-app
  namespace: stage
spec:
  ports:
  - name: http
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app.kubernetes.io/name: backend-app
    app.kubernetes.io/part-of: full-stack
status:
  loadBalancer: {}
