environments/stage/apps/full-stack/services/backend-app/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: backend-app
  namespace: stage
spec:
  port:
    targetPort: 8081
  to:
    kind: Service
    name: backend-app
    weight: 100
  wildcardPolicy: None
